# cliprust

./: Cargo.toml  README.md
src/: config.rs  history.rs  main.rs
