[package]
name = "cliprust"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.x", features = ["derive"] }
dirs = "6.0.0"
image = "0.25.5"
infer = "0.16.0"
regex = "1.11.1"
serde = { version = "1.x", features = ["derive"] }
toml = { version = "0.8.x" }
blake3 = { version = "1.8.2", features = ["serde"] }
